# mac-classic-player

./: .gitignore  CLAUDE.md  README.md  eslint.config.mjs  lefthook.yml  package-lock.json  package.json  tsconfig.json  vite.config.ts
assets/: icon.icns
docs/: architecture-analysis.md
lp/: package-lock.json  package.json
lp/src/app/: globals.css  layout.tsx  page.module.css  page.tsx
main/: main.ts
renderer/: App.tsx  index.html  index.tsx  vite-env.d.ts
renderer/components/: AudioPlayer.tsx  HelpOverlay.tsx  MediaControls.tsx  TrackInfoOverlay.tsx  VideoPlayer.tsx
renderer/hooks/: useElectronEvents.ts  useKeyboardShortcuts.ts  useMediaArtwork.ts  useMediaFiles.ts  useTauriEvents.ts
renderer/store/: actionTypes.ts  videoQueueReducer.ts
renderer/styles/: VideoPlayer.module.css  global.css
renderer/types/: videoTypes.ts
renderer/utils/: fileUtils.ts  mediaFile.ts
scripts/: patch-plist.sh  strip-electron-bloat.sh
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
