[package]
name = "mac-classic-player"
version = "0.1.1"
description = "Mac Classic Player"
authors = ["piro"]
edition = "2021"

[lib]
name = "mac_classic_player_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sys-locale = "0.3"
tauri-plugin-opener = "2.5.3"
urlencoding = "2"
