[package]
name = "mac-classic-player"
version = "0.3.2"
description = "Mac Classic Player"
authors = ["piro"]
edition = "2021"

[lib]
name = "mac_classic_player_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
tauri = { version = "2.11.5", features = [] }
tauri-plugin-dialog = "2.7.2"
tauri-plugin-fs = "2.5.1"
tauri-plugin-shell = "2.3.5"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"
tauri-plugin-window-state = "2.4.1"
serde = { version = "1.0.229", features = ["derive"] }
serde_json = "1.0.150"
sys-locale = "0.3.2"
tauri-plugin-opener = "2.5.4"
urlencoding = "2.1.3"
